# OMSimulator

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Jenkinsfile  Makefile  Makefile.omdev.mingw  README.md  build.bat  buildWinVS.bat  buildWinVS14.bat  buildWinVS15.bat  config.bat  configWinVS.bat  configWinVS14.bat  configWinVS15.bat
doc/: CMakeLists.txt  Makefile
doc/UsersGuide/: .gitignore  CMakeLists.txt  Makefile  README.md  make.bat
doc/UsersGuide/source/: OMEdit.rst  OMSimulator.rst  OMSimulatorLib.rst  OMSimulatorLua.rst  OMSimulatorPython.rst  OMSimulatorPython3.rst  OMSysIdent.rst  OpenModelicaScripting.rst  SSP.rst  conf.py  index.rst  introduction.rst
doc/UsersGuide/source/api/: RunFile.rst  activateVariant.rst  addBus.rst  addConnection.rst  addConnector.rst  addConnectorToBus.rst  addConnectorToTLMBus.rst  addExternalModel.rst  addFMISubModel.rst  addFMU.rst  addResources.rst  addSignalsToResults.rst  addSolver.rst  addSubModel.rst  addSystem.rst  addTLMBus.rst  addTLMConnection.rst  addTLMInterface.rst  addTable.rst  cancelSimulation_asynchronous.rst  compareSimulationResults.rst  connectSolver.rst  copySystem.rst  delete.rst  deleteConnection.rst  deleteConnectorFromBus.rst  deleteConnectorFromTLMBus.rst  deleteResources.rst  deleteSubModel.rst  describe.rst  doStep.rst  doSteps.rst  duplicateVariant.rst  exists.rst  export.rst  exportCompositeStructure.rst  exportDependencyGraphs.rst  exportSSMTemplate.rst  exportSSVTemplate.rst  exportSnapshot.rst  (+124 more)
doc/UsersGuide/source/api/oms3/: addComponent.rst  addConnection.rst  addConnector.rst  addResource.rst  addSSVReference.rst  addSystem.rst  component.rst  delete.rst  deleteResource.rst  duplicateAndActivateVariant.rst  exportSSMTemplate.rst  exportSSVTemplate.rst  fmu.rst  (+18 more)
doc/dev/: OMSimulatorLib.doxyfile
doc/dev/OMSimulatorLib/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  OMSimulatorLib.tex  mainpage.md
doc/source/: OMSimulator.rst  OMSimulatorLib.rst  OMSimulatorLua.rst  index.rst
doc/source/api/: compareSimulationResults.rst  describe.rst  exportDependencyGraph.rst  getBoolean.rst  getCurrentTime.rst  getMaxIterations.rst  getReal.rst  initialize.rst  loadModel.rst  newModel.rst  reset.rst  setInteger.rst  setLogFile.rst  setMaxIterations.rst  setResultFile.rst  setSolverMethod.rst  setStartTime.rst  setStopTime.rst  setTempDirectory.rst  setTolerance.rst  setVariableFilter.rst  setWorkingDirectory.rst  simulate.rst  terminate.rst
src/OMFitLib/: CMakeLists.txt  FitModel.cpp  FitModel.h  OMFit.cpp  OMFit.h  README.MD  test_HelloWorld_cs_Fit.c  test_Lin2DimODE_cs_Fit.cpp
src/OMFitLua/: CMakeLists.txt  OMFitLua.c
src/OMSimulator/: Application.cpp  Application.h  CMakeLists.txt  DemoLayer.h  FPSCounter.cpp  Options.cpp  Options.h  ScopeLayer.h  main.cpp
src/OMSimulatorGui/: Application.cpp  Application.h  CMakeLists.txt  DemoLayer.h  FPSCounter.cpp  FPSCounter.h  Layer.h  ScopeLayer.h  main.cpp
src/OMSimulatorLib/: AlgLoop.cpp  AlgLoop.h  AlgLoopSolver.cpp  AlgLoopSolver.h  BusConnector.cpp  BusConnector.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  Clock.cpp  Clock.h  Clocks.cpp  Clocks.h  ComRef.cpp  ComRef.h  Component.cpp  Component.h  ComponentDCP.cpp  ComponentDCP.h  ComponentFMU3CS.cpp  ComponentFMU3CS.h  ComponentFMU3ME.cpp  ComponentFMU3ME.h  ComponentFMUCS.cpp  ComponentFMUCS.h  ComponentFMUME.cpp  ComponentFMUME.h  ComponentTable.cpp  ComponentTable.h  CompositeModel.cpp  CompositeModel.h  Connection.cpp  Connection.h  Connector.cpp  Connector.h  DirectedGraph.cpp  DirectedGraph.h  Element.cpp  (+127 more)
src/OMSimulatorLib/DummyTLM/: SystemTLM.h  TLMBusConnector.h  TLMInterface.h
src/OMSimulatorLib/TLM/: ExternalModel.cpp  ExternalModel.h  SystemTLM.cpp  SystemTLM.h  TLMBusConnector.cpp  TLMBusConnector.h  TLMCompositeModel.cpp  TLMCompositeModel.h  TLMInterface.cpp  TLMInterface.h
src/OMSimulatorLib/oms2/: ComRef.cpp  ComRef.h  CompositeModel.cpp  CompositeModel.h  Connection.cpp  Connection.h  Connector.cpp  Connector.h  DirectedGraph.cpp  DirectedGraph.h  Element.cpp  Element.h  ExternalModel.cpp  ExternalModel.h  FMICompositeModel.cpp  FMICompositeModel.h  FMISubModel.cpp  FMISubModel.h  FMUInfo.cpp  FMUInfo.h  FMUWrapper.cpp  FMUWrapper.h  Logging.cpp  Logging.h  Model.cpp  Model.h  PMRChannel.h  PMRChannelMap.h  PMRChannelMaster.h  Pkg_oms2.h  Scope.cpp  Scope.h  SignalRef.cpp  SignalRef.h  TLMCompositeModel.cpp  TLMCompositeModel.h  TLMConnection.h  TLMInterface.cpp  TLMInterface.h  Table.cpp  (+3 more)
src/OMSimulatorLib/oms2/ssd/: ConnectionGeometry.cpp  ConnectionGeometry.h  ConnectorGeometry.cpp  ConnectorGeometry.h  ElementGeometry.cpp  ElementGeometry.h  SystemGeometry.cpp  SystemGeometry.h  Tags.cpp  Tags.h
src/OMSimulatorLib/oms3/: Model.cpp  Model.h  SimulationUnit.cpp  SimulationUnit.h
src/OMSimulatorLib/ssd/: ConnectionGeometry.cpp  ConnectionGeometry.h  ConnectorGeometry.cpp  ConnectorGeometry.h  ElementGeometry.cpp  ElementGeometry.h  SystemGeometry.cpp  SystemGeometry.h  Tags.cpp  Tags.h
src/OMSimulatorLua/: CMakeLists.txt  OMSimulatorLua.c
src/OMSimulatorPython/: CMakeLists.txt  Model.py  NewAPI.py  OMSimulator.py  OMSimulator.py.in  OMSimulatorPython  OMSimulatorPython.bat  OMSimulatorPython3  OMSimulatorPython3.bat  OMSimulatorPython3.in  OMSysIdent.py  Scope.py  System.py  Types.py  __init__.py  __init__.py.in  capi.py  component.py  componenttable.py  connection.py  connector.py  cref.py  dcp.py  elementgeometry.py  enumeration.py  fmu.py  instantiated_model.py  namespace.py  settings.py  setup.py  ssd.py  ssm.py  ssp.py  ssv.py  system.py  types.py  unit.py  utils.py  values.py  variable.py  (+1 more)
src/OMSimulatorPython/OMSimulator/: __init__.py
src/OMSysIdentLib/: CMakeLists.txt  FitModel.cpp  FitModel.h  OMSysIdent.cpp  OMSysIdent.h  README.MD  test_HelloWorld_cs_Fit.c  test_Lin2DimODE_cs_Fit.cpp
src/OMSysIdentLua/: CMakeLists.txt  OMSysIdentLua.c
src/OMSysIdentPython/: CMakeLists.txt  OMSysIdentPython.bat
src/pip/: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  build_helpers.py  pyproject.toml  setup.py
(+1127 files in other folders)
